# NTRTsim

./: .gitignore  CHANGELOG  CHANGELOG.md  INSTALL  NOTICE  README  README.md  SuperBallLearningController.h  VERSION  heightSensor.h  setup.sh
src/core/: CMakeLists.txt  ImpedanceControl.cpp  ImpedanceControl.h  Muscle2P.cpp  Muscle2P.h  MuscleAnchor.cpp  MuscleAnchor.h  README_core.dox  abstractMarker.cpp  abstractMarker.h  core.dox  muscleAnchor.cpp  muscleAnchor.h  tgBaseRigid.cpp  tgBaseRigid.h  tgBaseString.cpp  tgBaseString.h  tgBasicActuator.cpp  tgBasicActuator.h  tgBox.cpp  tgBox.h  tgBoxMoreAnchors.cpp  tgBoxMoreAnchors.h  tgBulletCompressionSpring.cpp  tgBulletCompressionSpring.h  tgBulletContactSpringCable.cpp  tgBulletContactSpringCable.h  tgBulletRenderer.cpp  tgBulletRenderer.h  tgBulletSpringCable.cpp  tgBulletSpringCable.h  tgBulletSpringCableAnchor.cpp  tgBulletSpringCableAnchor.h  tgBulletUnidirComprSpr.cpp  tgBulletUnidirComprSpr.h  tgBulletUnidirectionalCompressionSpring.cpp  tgBulletUnidirectionalCompressionSpring.h  tgBulletUtil.cpp  tgBulletUtil.h  tgCast.h  (+47 more)
src/core/terrain/: CMakeLists.txt  tgBoxGround.cpp  tgBoxGround.h  tgBulletGround.cpp  tgBulletGround.h  tgCraterDeep.h  tgCraterGround.cpp  tgCraterGround.h  tgCraterShallow.cpp  tgCraterShallow.h  tgEmptyGround.cpp  tgEmptyGround.h  tgGround.h  tgHillyGround.cpp  tgHillyGround.h  tgImportGround.cpp  tgImportGround.h  tgImportGround_2.cpp  tgPlaneGround.cpp  tgPlaneGround.h
src/dev/Aliakbar/: AATController.cpp  AATController.h  AATModel.cpp  AATModel.h  AppAATModel.cpp  CMakeLists.txt  tgBallJoint.cpp  tgBallJoint.h  tgBallJointInfo.cpp  tgBallJointInfo.h
src/dev/Corde/: CMakeLists.txt  CordeCollisionObject.cpp  CordeModel.cpp  CordeModel.h  cordeAnchor.cpp  cordeAnchor.h  cordeColliders.cpp  cordeColliders.h  cordeCollisionObject.cpp  cordeCollisionObject.h  cordeCollisionShape.cpp  cordeCollisionShape.h  cordeConcaveCollisionAlgorithm.cpp  cordeConcaveCollisionAlgorithm.h  cordeDynamicsWorld.cpp  cordeDynamicsWorld.h  cordeRigidBodyCollisionConfiguration.cpp  cordeRigidBodyCollisionConfiguration.h  cordeRigidCollisionAlgorithm.cpp  cordeRigidCollisionAlgorithm.h  cordeSelfCollisionAlgorithm.cpp  cordeSelfCollisionAlgorithm.h  cordeSolvers.h  defaultCordeSolver.cpp  defaultCordeSolver.h
src/dev/bcera/: AppRocketPower.cpp  CMakeLists.txt  RPLengthController_Midflight_config1.cpp  RPLengthController_rand.cpp  RPModel.h  RPModel2.cpp  RPTensionController.h  RPTensionController_notrand.cpp  RPTensionController_rand.cpp  RPTensionController_roll.cpp  RPThruster.cpp  RPThruster.h  RPThruster_simple.cpp
src/dev/btietz/: BaseSpineCPGControl.cpp  BaseSpineCPGControl.h  BaseSpineModelLearning.cpp  BaseSpineModelLearning.h  CMakeLists.txt  NestedStructureTestModel_rb.h  README_btietz.dox  tgCPGInfo.cpp  tgCPGInfo.h  tgCPGStringControl.h  tgCordeModel.cpp  tgCordeModel.h  tgCordeStringInfo.cpp  tgCordeStringInfo.h  tgRBString.cpp  tgRBString.h  tgRBStringInfo.cpp  tgRBStringInfo.h
src/dev/eajung/: CMakeLists.txt  FlemonsArm.h
src/dev/introWorkspace/: App3BarTraditional.cpp  App3BarYAML.cpp  AppTestSUPERballML.cpp  CMakeLists.txt  HopfControllerML.cpp  HopfControllerML.h  LengthControllerML.h  LengthControllerYAML.cpp  LengthControllerYAML.h  threeBarModel.cpp
src/dev/mfanton/: CMakeLists.txt
src/dev/muscleNP/: CMakeLists.txt  MuscleNP.cpp  MuscleNP.h  tgGhostInfo.cpp  (+5 more)
src/helpers/: CMakeLists.txt  FileHelpers.cpp  FileHelpers.h  README_helpers.dox  resources.h  resources.h.in
src/sensors/: CMakeLists.txt  README_sensors.dox  SensorsRedesignOutline_2017-01-03.docx  abstractMarkerSensor.cpp  abstractMarkerSensor.h  abstractMarkerSensorInfo.cpp  abstractMarkerSensorInfo.h  tgCompoundRigidSensor.cpp  tgCompoundRigidSensor.h  tgCompoundRigidSensorInfo.cpp  tgCompoundRigidSensorInfo.h  tgDataLogger.cpp  tgDataLogger.h  tgDataLogger2.cpp  tgDataLogger2.h  tgDataManager.cpp  tgDataManager.h  tgDataObserver.cpp  tgDataObserver.h  tgFullStateMonitor.cpp  tgFullStateMonitor.h  tgRodSensor.cpp  tgRodSensor.h  tgRodSensorInfo.cpp  tgRodSensorInfo.h  tgSensor.cpp  tgSensor.h  tgSensorInfo.cpp  tgSensorInfo.h  tgSphereSensor.cpp  tgSphereSensor.h  tgSphereSensorInfo.cpp  tgSphereSensorInfo.h  tgSpringCableActuatorSensor.cpp  tgSpringCableActuatorSensor.h  tgSpringCableActuatorSensorInfo.cpp  tgSpringCableActuatorSensorInfo.h
src/tgcreator/: CMakeLists.txt  README_tgcreator.dox  tgBasicActuatorInfo.cpp  tgBasicActuatorInfo.h  tgBasicContactCableInfo.cpp  tgBasicContactCableInfo.h  tgBoxInfo.cpp  tgBoxInfo.h  tgBoxMoreAnchorsInfo.cpp  tgBoxMoreAnchorsInfo.h  tgBuildSpec.cpp  tgBuildSpec.h  tgCompoundRigidInfo.cpp  tgCompoundRigidInfo.h  tgCompressionSpringActuatorInfo.cpp  tgCompressionSpringActuatorInfo.h  tgConnectorInfo.cpp  tgConnectorInfo.h  tgEmptyInfo.cpp  tgEmptyInfo.h  tgKinematicActuatorInfo.cpp  tgKinematicActuatorInfo.h  tgKinematicContactCableInfo.cpp  tgKinematicContactCableInfo.h  tgLinearStringInfo.cpp  tgLinearStringInfo.h  tgMultiPointStringInfo.cpp  tgMultiPointStringInfo.h  tgNode.h  tgNodes.cpp  tgNodes.h  tgPair.cpp  tgPair.h  tgPairs.h  tgRigidAutoCompound.cpp  tgRigidAutoCompound.h  tgRigidInfo.cpp  tgRigidInfo.h  tgRodInfo.cpp  tgRodInfo.h  (+13 more)
src/yamlbuilder/: BuildModel  BuildTensegrityModel.cpp  CMakeLists.txt  TensegrityModel.cpp  TensegrityModel.h  TensegrityModelController.cpp  TensegrityModelController.h
test/: CMakeLists.txt
test/core/: CMakeLists.txt  tgRod_test.cpp
test/helpers/: CMakeLists.txt  FileHelpers.cpp  FileHelpers.h  FileHelpers_test.cpp
test/tgcreator/: CMakeLists.txt  tgUtil_test.cpp
test/util/: CMakeLists.txt  CPGEquations_test.cpp
test_integration/: CMakeLists.txt
test_integration/HillTest/: CMakeLists.txt  TetraSpineHills_test.cpp
test_integration/ICRA2015Tests/: CMakeLists.txt  ICRA2015_pair_ordering_test.cpp  ICRA2015_test.cpp
test_integration/MuscleNP/: CMakeLists.txt  MuscleNP_test.cpp
test_integration/SpineTests/: CMakeLists.txt  WorldConf_Spines_test.cpp
test_integration/TimestepIndependence/: CMakeLists.txt  MotorTimestep_test.cpp
(+5401 files in other folders)
